--- a/sample.env
+++ b/sample.env
@@ -2,6 +2,9 @@
 # NOTE: This file is used for Docker Compose builds #
 ####################################################
 
+# General
+DEMO_APPS_DOMAIN=localhost
+
 # Anonymous Message Board
 ANONYMOUS_MESSAGE_BOARD_DB_URI=mongodb://mongo:27017/anonymous-message-board
 
