--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
   "description": "Example projects for the freeCodeCamp.org curriculum",
   "scripts": {
     "lint": "eslint apps --max-warnings 0",
-    "prebuild": "node scripts/copy-dockerignore.js",
-    "prestart": "node scripts/copy-dockerignore.js",
+    "prebuild": "npm run create-caddyfile && node scripts/copy-dockerignore.js",
+    "prestart": "npm run create-caddyfile && node scripts/copy-dockerignore.js",
     "build": "docker compose build",
+    "create-caddyfile": "node scripts/create-caddyfile.js",
     "start": "docker compose up -d",
     "stop": "docker compose down",
     "test": "jest"
@@ -21,5 +22,8 @@
     "eslint-plugin-react": "7.32.2",
     "jest": "29.4.2",
     "prettier": "2.8.7"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.3"
   }
 }
