--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     networks:
       - proxy
     volumes:
-      - ./Caddyfile:/etc/caddy/Caddyfile
+      - ./Caddyfile:/etc/caddy/Caddyfile:ro
     ports:
     - 80:80
     - 443:443
@@ -31,7 +31,7 @@ services:
       - proxy
     build:
       context: ./apps/25--5-clock
-      dockerfile: ../../shared.Dockerfile
+      dockerfile: ../../docker/shared.Dockerfile
     ports:
       - 50005:3000
 
@@ -42,7 +42,7 @@ services:
       - proxy
     build:
       context: ./apps/american-british-translator
-      dockerfile: ../../shared.Dockerfile
+      dockerfile: ../../docker/shared.Dockerfile
     ports:
       - 50010:3000
 
@@ -68,7 +68,7 @@ services:
       - proxy
     build:
       context: ./apps/bar-chart
-      dockerfile: ../../shared.Dockerfile
+      dockerfile: ../../docker/shared.Dockerfile
     ports:
       - 50025:3000
 
@@ -110,7 +110,7 @@ services:
       - proxy
     build:
       context: ./apps/choropleth-map
-      dockerfile: ../../shared.Dockerfile
+      dockerfile: ../../docker/shared.Dockerfile
     ports:
       - 50037:3000
 
@@ -121,7 +121,7 @@ services:
       - proxy
     build:
       context: ./apps/drum-machine
-      dockerfile: ../../shared.Dockerfile
+      dockerfile: ../../docker/shared.Dockerfile
     ports:
       - 50038:3000
 
@@ -147,7 +147,7 @@ services:
       - proxy
     build:
       context: ./apps/file-metadata-microservice
-      dockerfile: ../../shared.Dockerfile
+      dockerfile: ../../docker/shared.Dockerfile
     ports:
       - 50050:3000
 
@@ -158,7 +158,7 @@ services:
       - proxy
     build:
       context: ./apps/forum-proxy
-      dockerfile: ../../shared.Dockerfile
+      dockerfile: ../../docker/shared.Dockerfile
     ports:
       - 50060:3000
 
@@ -169,7 +169,7 @@ services:
       - proxy
     build:
       context: ./apps/heat-map
-      dockerfile: ../../shared.Dockerfile
+      dockerfile: ../../docker/shared.Dockerfile
     ports:
       - 50064:3000
 
@@ -212,7 +212,7 @@ services:
       - proxy
     build:
       context: ./apps/javascript-calculator
-      dockerfile: ../../shared.Dockerfile
+      dockerfile: ../../docker/shared.Dockerfile
     ports:
       - 50075:3000
 
@@ -241,7 +241,7 @@ services:
       - proxy
     build:
       context: ./apps/markdown-previewer
-      dockerfile: ../../shared.Dockerfile
+      dockerfile: ../../docker/shared.Dockerfile
     ports:
       - 50205:3000
 
@@ -252,7 +252,7 @@ services:
       - proxy
     build:
       context: ./apps/metric-imperial-converter
-      dockerfile: ../../shared.Dockerfile
+      dockerfile: ../../docker/shared.Dockerfile
     ports:
       - 50090:3000
 
@@ -263,7 +263,7 @@ services:
       - proxy
     build:
       context: ./apps/p2p-video-chat-application
-      dockerfile: ../../shared.Dockerfile
+      dockerfile: ../../docker/shared.Dockerfile
     ports:
       - 50100:3000
 
@@ -289,7 +289,7 @@ services:
       - proxy
     build:
       context: ./apps/personal-portfolio
-      dockerfile: ../../shared.Dockerfile
+      dockerfile: ../../docker/shared.Dockerfile
     ports:
       - 50260:3000
 
@@ -300,7 +300,7 @@ services:
       - proxy
     build:
       context: ./apps/product-landing-page
-      dockerfile: ../../shared.Dockerfile
+      dockerfile: ../../docker/shared.Dockerfile
     ports:
       - 50240:3000
 
@@ -311,7 +311,7 @@ services:
       - proxy
     build:
       context: ./apps/random-quote-machine
-      dockerfile: ../../shared.Dockerfile
+      dockerfile: ../../docker/shared.Dockerfile
     ports:
       - 50105:3000
 
@@ -322,7 +322,7 @@ services:
       - proxy
     build:
       context: ./apps/request-header-parser-microservice
-      dockerfile: ../../shared.Dockerfile
+      dockerfile: ../../docker/shared.Dockerfile
     ports:
       - 50110:3000
 
@@ -333,7 +333,7 @@ services:
       - proxy
     build:
       context: ./apps/scatterplot-graph
-      dockerfile: ../../shared.Dockerfile
+      dockerfile: ../../docker/shared.Dockerfile
     ports:
       - 50115:3000
 
@@ -344,7 +344,7 @@ services:
       - proxy
     build:
       context: ./apps/secure-real-time-multiplayer-game
-      dockerfile: ../../shared.Dockerfile
+      dockerfile: ../../docker/shared.Dockerfile
     ports:
       - 50120:3000
 
@@ -384,7 +384,7 @@ services:
       - proxy
     build:
       context: ./apps/sudoku-solver
-      dockerfile: ../../shared.Dockerfile
+      dockerfile: ../../docker/shared.Dockerfile
     ports:
       - 50150:3000
 
@@ -395,7 +395,7 @@ services:
       - proxy
     build:
       context: ./apps/survey-form
-      dockerfile: ../../shared.Dockerfile
+      dockerfile: ../../docker/shared.Dockerfile
     ports:
       - 50280:3000
 
@@ -406,7 +406,7 @@ services:
       - proxy
     build:
       context: ./apps/technical-documentation-page
-      dockerfile: ../../shared.Dockerfile
+      dockerfile: ../../docker/shared.Dockerfile
     ports:
       - 50250:3000
 
@@ -417,7 +417,7 @@ services:
       - proxy
     build:
       context: ./apps/timestamp-microservice
-      dockerfile: ../../shared.Dockerfile
+      dockerfile: ../../docker/shared.Dockerfile
     ports:
       - 50160:3000
 
@@ -428,7 +428,7 @@ services:
       - proxy
     build:
       context: ./apps/treemap-diagram
-      dockerfile: ../../shared.Dockerfile
+      dockerfile: ../../docker/shared.Dockerfile
     ports:
       - 50255:3000
 
@@ -439,7 +439,7 @@ services:
       - proxy
     build:
       context: ./apps/tribute-page
-      dockerfile: ../../shared.Dockerfile
+      dockerfile: ../../docker/shared.Dockerfile
     ports:
       - 50270:3000
 
