--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "prettier": "2.8.7"
   },
   "dependencies": {
-    "dotenv": "^16.0.3"
+    "18": "^0.0.0",
+    "dotenv": "^16.0.3",
+    "node": "^19.8.1"
   }
 }
