--- a/package.json
+++ b/package.json
@@ -24,8 +24,6 @@
     "prettier": "2.8.7"
   },
   "dependencies": {
-    "18": "^0.0.0",
-    "dotenv": "^16.0.3",
-    "node": "^19.8.1"
+    "dotenv": "^16.0.3"
   }
 }
