Corrected other eslint bugs

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,7 +17,7 @@
   "overrides": [
     {
       "files": ["apps/secure-real-time-multiplayer-game/tests/1_unit-tests.js",
-      "apps/build-a-pinterest-clone/client/*", "**/rollup.config.js", "apps/p2p-video-chat-application/src/client.js"],
+      "apps/build-a-pinterest-clone/client/*", "**/rollup.config.js", "apps/p2p-video-chat-application/src/client.js", "apps/nightlife-coordination-app/client/*"],
       "parserOptions": {
         "sourceType": "module"
       }
