--- a/apps/nightlife-coordination-app/package.json
+++ b/apps/nightlife-coordination-app/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^7.0.4",
     "passport": "^0.6.0",
     "passport-github2": "^0.1.12",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
