--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -268,6 +268,17 @@ services:
     ports:
       - 50100:3000
 
+  palindrome-checker:
+    container_name: palindrome-checker
+    restart: unless-stopped
+    networks:
+      - proxy
+    build:
+      context: ./apps/palindrome-checker
+      dockerfile: ../../shared.Dockerfile
+    ports:
+      - 50300:3000
+
   personal-library:
     container_name: personal-library
     restart: unless-stopped
