--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -338,6 +338,17 @@ services:
     ports:
       - 50105:3000
 
+  random-quote-machine-js:
+    container_name: random-quote-machine-js
+    restart: unless-stopped
+    networks:
+      - proxy
+    build:
+      context: ./apps/random-quote-machine-js
+      dockerfile: ../../shared.Dockerfile
+    ports:
+      - 50340:3000
+
   request-header-parser-microservice:
     container_name: request-header-parser-microservice
     restart: unless-stopped
