--- a/apps/pokemon-search-app/package.json
+++ b/apps/pokemon-search-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "random-quote-machine-js",
+  "name": "pokemon-search-app",
   "version": "0.0.1",
   "description": "JavaScript Algorithms and Data Structures project for freeCodeCamp",
   "main": "server.js",
