--- a/sample.env
+++ b/sample.env
@@ -37,6 +37,9 @@ MANAGE_A_BOOK_TRADING_CLUB_APP_URL=http://localhost:3000
 # Personal Library
 PERSONAL_LIBRARY_DB=mongodb://mongo:27017/personal-library
 
+# PokéAPI Proxy
+POKEAPI_PROXY_CACHE_TTL_HOURS=12
+
 # Stock Price Checker
 STOCK_PRICE_CHECKER_DB_URI=mongodb://mongo:27017/stock-price-checker
 
