--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "create-caddyfile": "node scripts/create-caddyfile.js",
     "start": "docker compose up -d",
     "stop": "docker compose down",
+    "prepare": "husky install",
     "test": "jest"
   },
   "devDependencies": {
@@ -21,7 +22,9 @@
     "eslint-config-prettier": "8.7.0",
     "eslint-plugin-react": "7.33.2",
     "jest": "29.7.0",
-    "prettier": "2.8.8"
+    "prettier": "2.8.8",
+    "husky": "8.0.0",
+    "lint-staged": "15.0.2"
   },
   "dependencies": {
     "dotenv": "^16.0.3"
