--- a/apps/pokeapi-proxy/package.json
+++ b/apps/pokeapi-proxy/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "1.6.0",
+    "cors": "2.8.5",
     "dotenv": "16.3.1",
     "express": "4.18.2",
     "node-cache": "5.1.2"
