fix(.github): update codeowners config

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -12,3 +12,27 @@
 # -------------------------------------------------
 
 * @freecodecamp/dev-team
+
+# --- Owned by none (negate rule above) ---
+
+*.md
+package.json
+package-lock.json
+
+# -------------------------------------------------
+# All files in the root are owned by dev team
+# -------------------------------------------------
+
+/* @freecodecamp/dev-team
+
+# --- Owned by none (negate rule above) ---
+
+/package.json
+/package-lock.json
+
+# -------------------------------------------------
+# Files that need attention from Staff
+# -------------------------------------------------
+
+# README, LICENSE, etc.
+/*.md @freeCodeCamp/staff
