chore: add no-unused-vars ignored patterns

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,13 @@
     "router": true
   },
   "extends": ["eslint:recommended", "prettier"],
+  "rules": {
+    "no-unused-vars": ["warn", {
+      "argsIgnorePattern": "^_",
+      "varsIgnorePattern": "^_",
+      "caughtErrorsIgnorePattern": "^_"
+      }]
+  },
   "overrides": [
     {
       "files": [
