feat: add end to end testing system

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,8 @@ apps/twitch-proxy/.data/
 apps/twitch-proxy/.logs/
 Caddyfile
 .eslintcache
+
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
