--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -15,6 +15,10 @@ jobs:
           node-version: lts/*
       - name: Install dependencies
         run: npm ci
+      - name: Start Projects
+        run: |
+          npm run build -- --no-cache
+          npm start
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
       - name: Sleep For 30 Seconds
