feat: create nightlife api

--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,7 @@ node_modules
 apps/stock-price-checker-proxy/cache/
 apps/twitch-proxy/.data/
 apps/twitch-proxy/.logs/
+apps/yelp-proxy/.data/
+apps/yelp-proxy/.logs/
 Caddyfile
 .eslintcache
