create live search API and client

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -226,6 +226,17 @@ services:
     ports:
       - 50075:3000
 
+  live-search:
+    container_name: live-search
+    restart: unless-stopped
+    networks:
+      - proxy
+    build:
+      context: ./apps/live-search
+      dockerfile: ../../shared.Dockerfile
+    ports:
+      - 50080:3000
+
   manage-a-book-trading-club:
     container_name: manage-a-book-trading-club
     restart: unless-stopped
