chore: remove staff from codeowners

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -17,7 +17,7 @@
 
 *.md
 package.json
-package-lock.json
+pnpm-lock.yaml
 
 # -------------------------------------------------
 # All files in the root are owned by dev team
@@ -28,11 +28,4 @@ package-lock.json
 # --- Owned by none (negate rule above) ---
 
 /package.json
-/package-lock.json
-
-# -------------------------------------------------
-# Files that need attention from Staff
-# -------------------------------------------------
-
-# README, LICENSE, etc.
-/*.md @freeCodeCamp/staff
+/pnpm-lock.yaml
